# CMake-Tutorial

./: .gitignore  CMakeLists.txt  main.cpp
